# test-on-local-vertica

./: main.py  pyproject.toml  requirements.txt
configs/: config.yml  testing-config.yml
service/: service.py
tests/: conftest.py  setup_vertica_testing.py  test_vertica.py
